--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@
 	width: 100vw;
 }
 
+.hex-input {
+    width: 200px;
+}
+
+.rgb-container {
+	color: white;
+    width: 200px;
+    text-align: center;
+}
+
